/*
 *  UCF COP3330 Fall 2021 Assignment 4 Solution
 *  Copyright 2021 David La Rosa Giraud
 */
package ucf.assignments;

public class item {

    private boolean complete;

    private String name;
    private String descript;
    private String date;

   public static int done(){

       /*
       This method will set the item complete value to true
       Effectively marking the item as done

        If the item was already true then it will return 1
        else it will return 0
       */

       return -1;

   }

    public static int isDone(){

       /*
       *  This method will return the value of complete
       *
       * Will return 1 if complete is true
       *
       * else will return 0
       * */

       return -1;
    }

    public static String getName(){

        /*
         *  This method will return a name of the item
         *
         * Will return 1 if it completes the task
         *
         * else will return 0
         * */

       return "-1";
    }

    public static String getDescript(){

        /*
         *  This method will return the description of the item
         *
         * Will return 1 if it completes the task
         *
         * else will return 0
         * */


        return "-1";
    }

    public static String getDate(){

        /*
         *  This method will return the date of the item
         *
         * Will return 1 if it completes the task
         *
         * else will return 0
         * */


        return "-1";
    }

    public static int editName(){

        /*
         *  This method will receive a String and will replace the current name with the new string
         *
         * Will return 1 if it completes the task
         *
         * else will return 0
         * */


        return -1;

    }

    public static int editDescrpt(){

        /*
         *  This method will receive a String and will replace the current item description with the new string
         *
         * Will return 1 if it completes the task
         *
         * else will return 0
         * */

        return -1;

    }

    public static int editDate(){

        /*
         *  This method will receive a String and will replace the item date with the new string
         *
         * Will return 1 if it completes the task
         *
         * else will return 0
         * */

        return -1;

    }



}
