/*
 *  UCF COP3330 Fall 2021 Assignment 4 Solution
 *  Copyright 2021 David La Rosa Giraud
 */
package ucf.assignments;

import java.util.List;

public class listOfList {

    private List<list>  arr = (List<list>) new list();


    public static int addList(){

        /*
       This method will take a list object and add it to the list<List>

       Will return 1 if it completes the task

       else will return 0
       */

        return -1;


    }

    public static int deleteList(){

        /*
       This method will take an int and will remove the list object associated to the corresponding index

       Will return 1 if it completes the task

       else will return 0
       */

        return -1;
    }

    public static int getList(){

        /*
       This method will take an int and will return the list object associated to the corresponding index

       */



        return -1;
    }

    public static int isEmpty(){

        /*
       This method will take an int and will remove the list object associated to the corresponding index

       Will return 0 if the list is empty

       else will return 1
       */

        return -1;
    }
    
    public static int exportOne(){

        /*
       This method will read from a file

       It will get a list from the file

       the list will be added to the listoflist object

       Will return 1 if it completes the task

       else will return 0

       */



        return -1;
    }

    public static int exportAll(){

        /*
       This method will read all the existing list from an external file

       it will combine it with the current listOfList

       Will return 1 if it completes the task

       else will return 0

       */
        return -1;
    }

    public static int importOne(){

        /*
       This method will take an int along with getList() to save the list items to an external file

       Will return 1 if it completes the task

       else will return 0

       */


        return -1;
    }

    public static int importAll(){

        /*
       This method will save all the list items to an external file

       Will return 1 if it completes the task

       else will return 0

       */


        return -1;
    }

}
